<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".home_screen.TimeoutPeriod">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeoutPeriod"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_margin="57dp"/>


        <GridLayout
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="4">


            <androidx.cardview.widget.CardView
                android:id="@+id/oneMinute"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/oneMinute_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/oneMinute_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/twoMinutes"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/twoMinutes_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/twoMinutes_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/threeMinutes"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/threeMinutes_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/threeMinutes_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fourMinutes"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/fourMinutes_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/fourMinutes_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fiveMinutes"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/fiveMinutes_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/fiveMinutes_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sevenMinutes"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/sevenMinutes_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/sevenMinutes_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tenMinutes"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/tenMinutes_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/tenMinutes_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fifteenMinutes"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/fifteenMinutes_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/fifteenMinutes_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/back"
            android:layout_width="360dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="86dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_replay_black_24dp" />

                <TextView
                    android:id="@+id/timeout_period_backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</ScrollView>